--- a/CRM/views/list-event.ejs
+++ b/CRM/views/list-event.ejs
@@ -1,101 +1,105 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+ <head>
+ <!-- Required meta tags -->
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <head>
-    <link rel='stylesheet' href='https://unpkg.com/@coreui/coreui@2.1.16/dist/css/coreui.min.css' />
-    <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css">
-  </head>
+ <!-- CoreUI CSS -->
+ <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui@3.0.0-rc.0/dist/css/coreui.min.css" crossorigin="anonymous">
+ <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css">
 
-<body class="app sidebar-show aside-menu-show">
+ <title>CRM - View Event</title>
+ </head>
+ <body class="c-app">
 
-  <header class="app-header navbar">
-    <% include partials/header %>
-  </header>
+   <div class="c-sidebar c-sidebar-light c-sidebar-fixed c-sidebar-lg-show" id="sidebar">
+     <% include partials/sidebar %>
+   </div>
 
-  <div class="app-body">
+  <div class="c-wrapper">
+    <header class="c-header c-header-dark bg-primary c-header-fixed">
+      <!-- Header content here -->
+      <% include partials/header %>
+    </header>
+    <div class="c-body">
+      <main class="c-main">
+        <!-- Main content here -->
+        <main class="main mt-2 ml-3">
+          <form id="formListEvent" name="list-event" method="post" action="/list-event" onsubmit="enableFields()">
+          <input type="name" class="form-control" id="clientName" name="clientName" value="<%= clientName %>" hidden>
+          <div class="card w-100">
+            <h3 class="card-header">List Events</h3>
+            <div class="card-body">
+          <h4> Event Information</h4>
+          <p>Client Name: <%= clientName %></p>
+          <p>Date Range Start: <%= dateStartInput %></p>
+          <p>Date Range End: <%= dateEndInput %></p>
 
-    <div class="sidebar">
-      <% include partials/sidebar %>
-    </div>
+    <!-- Event History Listing -->
 
-    <main class="main mt-2 ml-3">
-      <form id="formListEvent" name="list-event" method="post" action="/list-event" onsubmit="enableFields()">
-      <input type="name" class="form-control" id="clientName" name="clientName" value="<%= clientName %>" hidden>
-      <div class="card w-100">
-        <h3 class="card-header">List Events</h3>
-        <div class="card-body">
-      <h4> Event Information</h4>
-      <p>Client Name: <%= clientName %></p>
-      <p>Date Range Start: <%= dateStartInput %></p>
-      <p>Date Range End: <%= dateEndInput %></p>
+          <div class="table-responsive">
+             <table class="table table-bordered">
+              <thead class="thead-dark">
+                <tr>
+                  <th scope="col"></th>
+                  <th scope="col">DATE</th>
+                  <th scope="col">AGENT</th>
+                  <th scope="col">CONTACT 1</th>
+                  <th scope="col">CONTACT 2</th>
+                  <th scope="col">VISIT TYPE</th>
+                  <th scope="col">REMARKS</th>
+                </tr>
+              </thead>
+              <tr>
+                <%
+                  var eventsList ='';
+                  for (i = 0; i < result.events.length; i++) {
+                    eventsList += '<th scope="row">' + '<button type="submit" form="formListEvent" name="submit" value=' + result.events[i]._id + '>Edit</button>' + '</th>';
+                    var str = result.events[i].eventTimeIn._i.toString();
+                    var str = str.substr(0,10);
+                    eventsList += '<td>' + str + '</td>';
+                    eventsList += '<td>' + result.events[i].agentAbbrev + '</td>';
+                    eventsList += '<td>' + result.events[i].contact1 + '</td>';
+                    eventsList += '<td>' + result.events[i].contact2 + '</td>';
+                    eventsList += '<td>' + result.events[i].eventType + '</td>';
+                    eventsList += '<td>' + result.events[i].eventRemarks + '</td>';
+                    eventsList += '</tr>';
+                }
+                %>
+                <%- eventsList %>
+              <tbody>
 
-<!-- Event History Listing -->
+              </tbody>
+            </table>
+            </div>
 
-      <div class="table-responsive">
-         <table class="table table-bordered">
-          <thead class="thead-dark">
-            <tr>
-              <th scope="col"></th>
-              <th scope="col">DATE</th>
-              <th scope="col">AGENT</th>
-              <th scope="col">CONTACT 1</th>
-              <th scope="col">CONTACT 2</th>
-              <th scope="col">VISIT TYPE</th>
-              <th scope="col">REMARKS</th>
-            </tr>
-          </thead>
-          <tr>
-            <%
-              var eventsList ='';
-              for (i = 0; i < result.events.length; i++) {
-                eventsList += '<th scope="row">' + '<button type="submit" form="formListEvent" name="submit" value=' + result.events[i]._id + '>Edit</button>' + '</th>';
-                var str = result.events[i].eventTimeIn._i.toString();
-                var str = str.substr(0,10);
-                eventsList += '<td>' + str + '</td>';
-                eventsList += '<td>' + result.events[i].agentAbbrev + '</td>';
-                eventsList += '<td>' + result.events[i].contact1 + '</td>';
-                eventsList += '<td>' + result.events[i].contact2 + '</td>';
-                eventsList += '<td>' + result.events[i].eventType + '</td>';
-                eventsList += '<td>' + result.events[i].eventRemarks + '</td>';
-                eventsList += '</tr>';
-            }
-            %>
-            <%- eventsList %>
-          <tbody>
-
-          </tbody>
-        </table>
+    <!-- BACK BUTTON -->
+          <div class="form-row">
+            <div class="form-group col">
+              <button type="button" class="btn btn-primary" onclick="goBack()">Back</button>
+            </div>
+            <script>
+              function goBack() {
+                window.history.back();
+              }
+            </script>
+          </div>
         </div>
-
-<!-- BACK BUTTON -->
-      <div class="form-row">
-        <div class="form-group col">
-          <button type="button" class="btn btn-primary" onclick="goBack()">Back</button>
-        </div>
-        <script>
-          function goBack() {
-            window.history.back();
-          }
-        </script>
       </div>
+
+        </main>
+      </main>
     </div>
+    <footer class="c-footer">
+      <!-- Footer content here -->
+      <h1>Footer Content</h1>
+    </footer>
   </div>
 
-    </main>
-
-    <aside class="aside-menu-hidden">
-      <!-- Aside menu content here -->
-    </aside>
-
-  </div>
-  <footer class="app-footer">
-    <% include partials/footer %>
-  </footer>
-
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/@coreui/coreui/dist/js/coreui.min.js"></script>
-</body>
-
+  <!-- Optional JavaScript -->
+ <!-- Popper.js first, then CoreUI JS -->
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" integrity="sha384-L2pyEeut/H3mtgCBaUNw7KWzp5n9&#43;4pDQiExs933/5QfaTh8YStYFFkOzSoXjlTb" crossorigin="anonymous"></script>
+ <script src="https://unpkg.com/@coreui/coreui@3.0.0-rc.0/dist/js/coreui.min.js"></script>
+ </body>
 </html>
