--- a/CRM/views/partials/sidebar.ejs
+++ b/CRM/views/partials/sidebar.ejs
@@ -1,131 +1,64 @@
+<div class="c-sidebar-brand">
+<a href="/home">CRM SOFTWARE</a>
+</div>
 
-<link rel="stylesheet" href="https://unpkg.com/browse/@coreui/coreui@2.1.16/dist/css/coreui.min.css">
+<ul class="c-sidebar-nav ps ps--active-y">
+  <li class="c-sidebar-nav-item">
+    <a class="c-sidebar-nav-link c-active" href="/search-client">
+      <i class="c-sidebar-nav-icon cil-briefcase"></i>
+      Clients
+    </a>
+  </li>
+  <li class="c-sidebar-nav-item">
+    <a class="c-sidebar-nav-link c-active" href="/search-contact">
+      <i class="c-sidebar-nav-icon cil-contact"></i>
+      Contacts
+    </a>
+  </li>
+  <li class="c-sidebar-nav-item">
+    <a class="c-sidebar-nav-link c-active" href="/search-event">
+      <i class="c-sidebar-nav-icon cil-calendar"></i>
+      Events
+    </a>
+  </li>
 
-
-  <nav class="sidebar-nav">
-    <ul class="nav">
-
-<!-- Return Home-->
-      <li class="nav-item mt-auto">
-        <a class="nav-link nav-link-success" href="/home">
-          <i class="nav-icon cui-home"></i>HOME</a>
+  <li class="c-sidebar-nav-dropdown">
+    <a class="c-sidebar-nav-dropdown-toggle" href="#">
+      <i class="c-sidebar-nav-icon cil-description"></i>
+      Reports
+    </a>
+    <ul class="c-sidebar-nav-dropdown-items">
+      <li class="c-sidebar-nav-item">
+        <a class="c-sidebar-nav-link" href="/report-activity">Activity Report</a>
       </li>
-
-<!-- Data Entry Links -->
-
-      <li class="nav-title">DATA ENTRY</li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="/entry-client">
-          <i class="nav-icon cui-briefcase "></i> Client Data Entry
-        </a>
+      <li class="c-sidebar-nav-item">
+        <a class="c-sidebar-nav-link" href="/report-client-history">Client History</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/entry-contact">
-          <i class="nav-icon cui-user"></i> Contact Data Entry
-        </a>
+      <li class="c-sidebar-nav-item">
+        <a class="c-sidebar-nav-link" href="/report-client-list">Client List</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/entry-event">
-          <i class="nav-icon cui-calendar"></i> Event Data Entry
-        </a>
+      <li class="c-sidebar-nav-item">
+        <a class="c-sidebar-nav-link" href="/report-contact-history">Contact History</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/entry-agent">
-          <i class="nav-icon cui-laptop"></i> Agent Data Entry
-        </a>
+      <li class="c-sidebar-nav-item">
+        <a class="c-sidebar-nav-link" href="/report-visit-count">Visit Count</a>
       </li>
-
-
-<!-- Quick View Links-->
-
-      <li class="nav-title">QUICK VIEW/EDIT</li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="/search-client">
-          <i class="nav-icon cui-briefcase "></i> Clients
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/search-contact">
-          <i class="nav-icon cui-user"></i> Contacts
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/search-event">
-          <i class="nav-icon cui-calendar"></i> Events
-        </a>
-      </li>
-
-
-<!-- Report Links-->
-      <li class="nav-title">REPORTS</li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="/report-activity">
-          <i class="nav-icon cui-map"></i> Activity Report
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/report-visit-count">
-          <i class="nav-icon cui-calculator"></i> Visit Count Report
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/report-client-list">
-          <i class="nav-icon cui-list"></i> Client List Report
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/report-client-history">
-          <i class="nav-icon cui-calendar"></i> Client History
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/report-contact-history">
-          <i class="nav-icon cui-people"></i> Contact History
-        </a>
-      </li>
-
-
-
-<!-- Import Files Links-->
-
-      <li class="nav-title">Import File</li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="/import-client">
-          <i class="nav-icon cui-briefcase "></i> Import Clients
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/import-contact">
-          <i class="nav-icon cui-user"></i> Import Contacts
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/import-agent">
-          <i class="nav-icon cui-calendar"></i> Import Agents
-        </a>
-      </li>
-
-
-
-      <li class="nav-item mt-auto">
-        <a class="nav-link nav-link-info" href="#">
-          <i class="nav-icon cui-cloud-download"></i>PLACEHOLDER</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link nav-link-danger" href="/logout">
-          <i class="nav-icon cui-account-logout "></i>
-          LOG OUT
-        </a>
-      </li>
-
-
-
-
-
-
     </ul>
-  </nav>
+  </li>
+
+</ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<button class="c-sidebar-minimizer c-class-toggler" type="button" data-target="_parent" data-class="c-sidebar-unfoldable"></button>
