--- a/CRM/views/review-agent-upload.ejs
+++ b/CRM/views/review-agent-upload.ejs
@@ -1,89 +1,86 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+ <head>
+ <!-- Required meta tags -->
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <head>
-    <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui@2.1.16/dist/css/coreui.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css">
-  </head>
+ <!-- CoreUI CSS -->
+ <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui@3.0.0-rc.0/dist/css/coreui.min.css" crossorigin="anonymous">
+ <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css">
 
-<body class="app sidebar-show aside-menu-show">
+ <title>CRM - Import Agent</title>
+ </head>
+ <body class="c-app">
 
-  <header class="app-header navbar">
-    <% include partials/header %>
-  </header>
+   <div class="c-sidebar c-sidebar-light c-sidebar-fixed c-sidebar-lg-show" id="sidebar">
+     <% include partials/sidebar %>
+   </div>
 
-  <div class="app-body">
+  <div class="c-wrapper">
+    <header class="c-header c-header-dark bg-primary c-header-fixed">
+      <!-- Header content here -->
+      <% include partials/header %>
+    </header>
+    <div class="c-body">
+      <main class="c-main">
+        <!-- Main content here -->
+        <main class="main mt-2 ml-3">
+         <form action="/upload-agents" method="post">
+           <input type="text" class="form-control" id="csvData" name="csvData" value="<%= JSONAgents %>" hidden>
+           <table class="table table-bordered">
+             <thead class="thead-dark">
+               <tr>
+                 <th style="width: 5%" scope="col">Agent Abbreviation:</th>
+                 <th style="width: 20%" scope="col">Agent First Name: </th>
+                 <th style="width: 20%" scope="col">Agent Last Name: </th>
+                 <th style="width: 20%" scope="col">Agent Position: </th>
+                 <th style="width: 20%" scope="col">Agent Phone: </th>
+               </tr>
+             </thead>
+             <tbody>
+               <%
+                 var list = '';
+                 for (i = 0; i < agents.length; i++) {
+                   list += '<tr>';
+                   list += '<td>' + agents[i].agentAbbrev + '</td>';
+                   list += '<td>' + agents[i].agentFirstName + '</td>';
+                   list += '<td>' + agents[i].agentLastName + '</td>';
+                   list += '<td>' + agents[i].agentPosition + '</td>';
+                   list += '<td>' + agents[i].agentPhone + '</td>';
+                   list += '</tr>'
+                 }
+               %>
+               <%- list %>
+             </tbody>
+           </table>
+           <input class="btn btn-primary" type="submit" value="Confirm Upload">
+         </form>
+        </main>
 
-    <div class="sidebar">
-      <% include partials/sidebar %>
+
+       <!-- BACK BUTTON -->
+         <div class="form-row">
+           <div class="form-group col">
+             <button type="button" class="btn btn-primary" onclick="goBack()">Back</button>
+           </div>
+           <script>
+             function goBack() {
+               window.history.back();
+             }
+           </script>
+         </div>
+      </main>
     </div>
-
-
-
-      <!-- TODO Insert blank Table -->
-
-     <main class="main mt-2 ml-3">
-      <form action="/upload-agents" method="post">
-        <input type="text" class="form-control" id="csvData" name="csvData" value="<%= JSONAgents %>" hidden>
-        <table class="table table-bordered">
-          <thead class="thead-dark">
-            <tr>
-              <th style="width: 5%" scope="col">Agent Abbreviation:</th>
-              <th style="width: 20%" scope="col">Agent First Name: </th>
-              <th style="width: 20%" scope="col">Agent Last Name: </th>
-              <th style="width: 20%" scope="col">Agent Position: </th>
-              <th style="width: 20%" scope="col">Agent Phone: </th>
-            </tr>
-          </thead>
-          <tbody>
-            <%
-              var list = '';
-              for (i = 0; i < agents.length; i++) {
-                list += '<tr>';
-                list += '<td>' + agents[i].agentAbbrev + '</td>';
-                list += '<td>' + agents[i].agentFirstName + '</td>';
-                list += '<td>' + agents[i].agentLastName + '</td>';
-                list += '<td>' + agents[i].agentPosition + '</td>';
-                list += '<td>' + agents[i].agentPhone + '</td>';
-                list += '</tr>'
-              }
-            %>
-            <%- list %>
-          </tbody>
-        </table>
-        <input class="btn btn-primary" type="submit" value="Confirm Upload">
-      </form>
-     </main>
-
-
-    <!-- BACK BUTTON -->
-      <div class="form-row">
-        <div class="form-group col">
-          <button type="button" class="btn btn-primary" onclick="goBack()">Back</button>
-        </div>
-        <script>
-          function goBack() {
-            window.history.back();
-          }
-        </script>
-      </div>
-
-    <aside class="aside-menu-hidden">
-      <!-- Aside menu content here -->
-    </aside>
-
+    <footer class="c-footer">
+      <!-- Footer content here -->
+      <h1>Footer Content</h1>
+    </footer>
   </div>
-  <footer class="app-footer">
-    <% include partials/footer %>
-  </footer>
 
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/@coreui/coreui/dist/js/coreui.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-</body>
-
+  <!-- Optional JavaScript -->
+ <!-- Popper.js first, then CoreUI JS -->
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" integrity="sha384-L2pyEeut/H3mtgCBaUNw7KWzp5n9&#43;4pDQiExs933/5QfaTh8YStYFFkOzSoXjlTb" crossorigin="anonymous"></script>
+ <script src="https://unpkg.com/@coreui/coreui@3.0.0-rc.0/dist/js/coreui.min.js"></script>
+ </body>
 </html>
