Fixed some labels in HTML (more of reports) & the header/dropdown menu on smaller screen sizes

--- a/CRM/views/partials/header.ejs
+++ b/CRM/views/partials/header.ejs
@@ -1,28 +1,39 @@
 <button class="c-header-toggler c-class-toggler d-lg-none mfe-auto" type="button" data-target="#sidebar" data-class="c-sidebar-show">
-<svg class="c-icon c-icon-lg">
-<use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-menu"></use>
-</svg>
-</button>
-
-
-
-<button class="c-header-toggler c-class-toggler mfs-3 d-md-down-none" type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true">
 <i class="cil-hamburger-menu"></i>
 </button>
 
-<button class="c-header-toggler c-class-toggler mfs-3 d-lg-none" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-  <i class="cil-hamburger-menu"></i>
-</button>
-
-            <div class="collapse" id="collapseExample">
-              <div class="card card-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-              </div>
-            </div>
 
 <a class="c-header-brand d-lg-none c-header-brand-up-center" href="/home">
   CRM SOFTWARE
 </a>
+
+
+
+<ul class="c-header-nav d-lg-none">
+  <li class="c-header-nav-item dropdown">
+    <a class="c-header-nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="cil-caret-bottom"></i></a>
+    <div class="dropdown-menu dropdown-menu-right pt-2 pb-2">
+      <a class="dropdown-item" href="#"><strong>Username</strong></a>
+      <a class="dropdown-item" href="#">Settings</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="#">Log Out</a>
+    </div>
+  </li>
+</ul>
+
+
+<!--
+<button class="c-header-toggler c-class-toggler mfs-3 d-lg-none" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+  <i class="cil-caret-bottom"></i>
+</button>
+<div class="collapse" id="collapseExample">
+  <div class="card card-body">
+TESTING
+  </div>
+</div>
+-->
+
+
 
 <ul class="c-header-nav d-md-down-none ml-auto">
   <li class="c-header-nav-item dropdown">
