--- a/CRM/views/partials/sidebar.ejs
+++ b/CRM/views/partials/sidebar.ejs
@@ -1,22 +1,22 @@
-<div class="c-sidebar-brand">
-<a href="/home">CRM SOFTWARE</a>
+<div class="c-sidebar-brand d-md-down-none">
+<a href="/home" style="color:white;">CRM SOFTWARE</a>
 </div>
 
 <ul class="c-sidebar-nav ps ps--active-y">
   <li class="c-sidebar-nav-item">
-    <a class="c-sidebar-nav-link c-active" href="/search-client">
+    <a class="c-sidebar-nav-link" href="/search-client">
       <i class="c-sidebar-nav-icon cil-briefcase"></i>
       Clients
     </a>
   </li>
   <li class="c-sidebar-nav-item">
-    <a class="c-sidebar-nav-link c-active" href="/search-contact">
+    <a class="c-sidebar-nav-link" href="/search-contact">
       <i class="c-sidebar-nav-icon cil-contact"></i>
       Contacts
     </a>
   </li>
   <li class="c-sidebar-nav-item">
-    <a class="c-sidebar-nav-link c-active" href="/search-event">
+    <a class="c-sidebar-nav-link" href="/search-event">
       <i class="c-sidebar-nav-icon cil-calendar"></i>
       Events
     </a>
