--- a/CRM/views/report-client-history.ejs
+++ b/CRM/views/report-client-history.ejs
@@ -35,7 +35,7 @@
                 <div class="form-row">
                   <div class="form-group col-12">
                       <label for="agentSelect">Client</label>
-                        <select class="form-control" name="clientSelect" id="clientSelect" onChange="changeAgent(this.value);" required>
+                        <select class="form-control" name="agentSelect" id="agentSelect" onChange="changeAgent(this.value);" required>
                           <%
                               var list = '<option value="" disabled selected>Select</option>';
                               for (i = 0; i < clientList.length; i++) {
