--- a/CRM/views/search-client.ejs
+++ b/CRM/views/search-client.ejs
@@ -35,7 +35,7 @@
           <!-- Select Client from Prepopulated list of options -->
             <div class="form-row">
               <div class="form-group col-12">
-                <label for="agentSelect">Select Client</label>
+                <label for="clientSelect">Select Client</label>
                 <select class="form-control" id="clientSelect" name="clientSelect">
                   <%
                       var list = '<option value="" disabled selected>Select</option>';
