--- a/CRM/views/search-contact.ejs
+++ b/CRM/views/search-contact.ejs
@@ -34,7 +34,7 @@
                 <!-- Select Contact from Prepopulated list of options -->
                   <div class="form-row">
                     <div class="form-group col-12">
-                        <label for="agentSelect">Select Contact</label>
+                        <label for="contactSelect">Select Contact</label>
                           <select class="form-control" id="contactID" name="contactID">
                             <%
                                 var list = '<option value="" disabled selected>Select</option>';
