--- a/CRM/views/report-activity.ejs
+++ b/CRM/views/report-activity.ejs
@@ -34,11 +34,11 @@
       <!-- Select Date Range for Data -->
             <div class="form-row">
               <div class="form-group col-6">
-                <label for="inputEmail4">Date Start</label>
+                <label for="inputDateStart">Date Start</label>
                 <input type="date" class="form-control" id="dateStartInput" name="dateStartInput" required>
               </div>
               <div class="form-group col-6">
-                <label for="inputPassword4">Date End</label>
+                <label for="inputDateEnd">Date End</label>
                 <input type="date" class="form-control" id="dateEndInput" name="dateEndInput" required>
               </div>
             </div>
