--- a/CRM/views/search-event.ejs
+++ b/CRM/views/search-event.ejs
@@ -34,7 +34,7 @@
           <!-- Select Agent from Prepopulated list of options -->
                   <div class="form-row">
                     <div class="form-group col-12">
-                      <label for="agentSelect">Select Client</label>
+                      <label for="clientSelect">Select Client</label>
                       <select class="form-control" name="clientName" id="clientName">
                       <%
                           var list = '<option value="" disabled selected>Select</option>';
@@ -50,11 +50,11 @@
                   <!-- Select Date Range for Data -->
                         <div class="form-row">
                           <div class="form-group col-6">
-                            <label for="inputEmail4">Date Range Start</label>
+                            <label for="inputDateStart">Date Range Start</label>
                             <input type="date" class="form-control" id="dateStartInput" name="dateStartInput" required>
                           </div>
                           <div class="form-group col-6">
-                            <label for="inputPassword4">Date Range End</label>
+                            <label for="inputDateEnd">Date Range End</label>
                             <input type="date" class="form-control" id="dateEndInput" name="dateEndInput" required>
                           </div>
                         </div>
