--- a/CRM/views/import-agent.ejs
+++ b/CRM/views/import-agent.ejs
@@ -26,8 +26,43 @@
       <main class="c-main">
         <!-- Main content here -->
         <main class="main mt-2 ml-3">
+          <div class="card  w-75">
+            <h3> Instructions: </h3>
+            <ul>
+              <li> Download the template file: <a href="../public/files/agents.csv" download>Agents.csv</a></li>
+              <li> Populate table with Agent information.</li>
+              <li> Delete Sample Data included </li>
+              <li> It is important that you do not change the column names </li>
+              <li> NOTE: Any fields with commas should be surronded by Double Quotes. <br/> <b>Example</b>: "1600 Pennsylvania Ave NW, Washington, DC"</li>
+              <li> Upload the file, click submit and review the information on the next page.</li>
+            </ul>
+            <br/>
+            <h3> Example Data: </h3>
+            <a href="/files/agents.csv" download>Download Template CSV File</a>
+            <table class="table table-bordered">
+              <thead class="thead-dark">
+                <tr>
+                  <th style="width: 5%" scope="col">Agent Abbreviation:</th>
+                  <th style="width: 20%" scope="col">Agent First Name: </th>
+                  <th style="width: 20%" scope="col">Agent Last Name: </th>
+                  <th style="width: 20%" scope="col">Agent Position: </th>
+                  <th style="width: 20%" scope="col">Agent Phone: </th>
+                </tr>
+                <tr>
+                  <td>JS</td>
+                  <td>John</td>
+                  <td>Smith</td>
+                  <td>Senior Account Manager</td>
+                  <td>123-4567</td>
+              </thead>
+            </table>
+          </div>
+
+        <h3> Upload File: </h3>
+
          <form action="/import-agent" method="post" enctype="multipart/form-data">
            <input type="file" class="form-control-file" name="agentCSV" required>
+           <br/>
            <input class="btn btn-primary" type="submit" value="Submit">
          </form>
 
@@ -35,8 +70,6 @@
      </div>
        </main>
 
-
-       <h4> If there is a comma in a column then that column should be surrounded by a single quote or double quote. </h4>
 
        <!-- BACK BUTTON -->
          <div class="form-row">
