--- a/CRM/views/import-client.ejs
+++ b/CRM/views/import-client.ejs
@@ -26,8 +26,55 @@
       <main class="c-main">
         <!-- Main content here -->
         <main class="main mt-2 ml-3">
+
+          <div class="card w-auto">
+            <h3> Instructions: </h3>
+            <ul>
+              <li> Download the template file: <a href="/files/clients.csv" download>Clients.csv</a></li>
+              <li> Populate table with Client information.</li>
+              <li> Delete Sample Data included </li>
+              <li> It is important that you do not change the column names </li>
+              <li> NOTE: Any fields with commas should be surronded by Double Quotes. <br/> <b>Example</b>: "1600 Pennsylvania Ave NW, Washington, DC"</li>
+              <li> Upload the file, click submit and review the information on the next page.</li>
+            </ul>
+            <br/>
+            <h3> Example Data: </h3>
+            <a href="/files/clients.csv" download>Download Template CSV File</a>
+            <table class="table table-bordered">
+              <thead class="thead-dark">
+                <tr>
+                  <th style="width: 10%" scope="col">Client Name:</th>
+                  <th style="width: 5%" scope="col">Client Phone: </th>
+                  <th style="width: 5%" scope="col">Clinet Fax: </th>
+                  <th style="width: 12%" scope="col">Client Address 1: </th>
+                  <th style="width: 12%" scope="col">Client Address 2: </th>
+                  <th style="width: 12%" scope="col">Client Address 3:</th>
+                  <th style="width: 12%" scope="col">Client Address 4: </th>
+                  <th style="width: 10%" scope="col">Clinet Email 1: </th>
+                  <th style="width: 10%" scope="col">Client Email 2: </th>
+                  <th style="width: 12%" scope="col">Client Notes: </th>
+                </tr>
+                <tr>
+                  <td>Acme Corporation</td>
+                  <td>123-4567</td>
+                  <td>321-7654</td>
+                  <td>"111 Wellington St, Ottawa, ON"</td>
+                  <td>"1600 Pennsylvania Ave NW, Washington, DC"</td>
+                  <td></td>
+                  <td></td>
+                  <td>info@acmecorporation.com</td>
+                  <td></td>
+                  <td>This is a sample data set</td>
+              </thead>
+            </table>
+          </div>
+          
+
+          <h3> Upload File: </h3>
+
          <form action="/import-client" method="post" enctype="multipart/form-data">
            <input type="file" class="form-control-file" name="clientCSV" required>
+           <br/>
            <input class="btn btn-primary" type="submit" value="Submit">
          </form>
 
@@ -35,8 +82,6 @@
      </div>
        </main>
 
-
-       <h4> If there is a comma in a column then that column should be surrounded by a single quote or double quote. </h4>
 
        <!-- BACK BUTTON -->
          <div class="form-row">
