--- a/CRM/views/import-contact.ejs
+++ b/CRM/views/import-contact.ejs
@@ -26,17 +26,55 @@
       <main class="c-main">
         <!-- Main content here -->
         <main class="main mt-2 ml-3">
-         <form action="/import-contact" method="post" enctype="multipart/form-data">
-           <input type="file" class="form-control-file" name="contactCSV" required>
-           <input class="btn btn-primary" type="submit" value="Submit">
-         </form>
 
+          <div class="card w-auto">
+            <h3> Instructions: </h3>
+            <ul>
+              <li> Download the template file: <a href="/files/contacts.csv" download>Contacts.csv</a></li>
+              <li> Populate table with Client information.</li>
+              <li> Delete Sample Data included </li>
+              <li> It is important that you do not change the column names </li>
+              <li> NOTE: Any fields with commas should be surronded by Double Quotes. <br/> <b>Example</b>: "1600 Pennsylvania Ave NW, Washington, DC"</li>
+              <li> Upload the file, click submit and review the information on the next page.</li>
+            </ul>
+            <br/>
+            <h3> Example Data: </h3>
+            <a href="/files/contacts.csv" download>Download Template CSV File</a>
+            <table class="table table-bordered">
+              <thead class="thead-dark">
+                <tr>
+                  <th style="width: 10%" scope="col">Contact First Name:</th>
+                  <th style="width: 5%" scope="col">Contact Last Name: </th>
+                  <th style="width: 5%" scope="col">Contact Position: </th>
+                  <th style="width: 12%" scope="col">Contact Phone:</th>
+                  <th style="width: 12%" scope="col">Contact Mobile: </th>
+                  <th style="width: 12%" scope="col">Contact Email:</th>
+                  <th style="width: 12%" scope="col">Contact Notes: </th>
+                </tr>
+                <tr>
+                  <td>John</td>
+                  <td>Smith</td>
+                  <td>Senior Account Manger</td>
+                  <td>123-4567</td>
+                  <td>321-7654</td>
+                  <td>john.smith@acmecorporation.com</td>
+                  <td>This is a sample data set</td>
+              </thead>
+            </table>
+          </div>
+
+          <h3> Upload File: </h3>
+
+          <form action="/import-contact" method="post" enctype="multipart/form-data">
+            <input type="file" class="form-control-file" name="contactCSV" required>
+            <br/>
+            <input class="btn btn-primary" type="submit" value="Submit">
+          </form>
+
+         </div>
        </div>
-     </div>
-       </main>
+      </main>
 
-
-       <h4> If there is a comma in a column then that column should be surrounded by a single quote or double quote. </h4>
 
        <!-- BACK BUTTON -->
          <div class="form-row">
