CRM-91 - fix fields that should be set as required

--- a/CRM/views/entry-agent.ejs
+++ b/CRM/views/entry-agent.ejs
@@ -55,7 +55,7 @@
           <div class="form-row">
               <div class="form-group col">
                 <label for="agentPosition">Position</label>
-                <select class="form-control" id="agentPosition" name="agentPosition">
+                <select class="form-control" id="agentPosition" name="agentPosition" required>
                 <option value="" disabled selected>Select</option>
           		  <option>Sales Executive</option>
           		  <option>Office</option>
