--- a/CRM/views/search-client.ejs
+++ b/CRM/views/search-client.ejs
@@ -36,7 +36,7 @@
             <div class="form-row">
               <div class="form-group col-12">
                 <label for="clientSelect">Select Client</label>
-                <select class="form-control" id="clientSelect" name="clientSelect">
+                <select class="form-control" id="clientSelect" name="clientSelect" required>
                   <%
                       var list = '<option value="" disabled selected>Select</option>';
                       for (i = 0; i < clientList.length; i++) {
