--- a/CRM/views/search-contact.ejs
+++ b/CRM/views/search-contact.ejs
@@ -35,7 +35,7 @@
                   <div class="form-row">
                     <div class="form-group col-12">
                         <label for="contactSelect">Select Contact</label>
-                          <select class="form-control" id="contactID" name="contactID">
+                          <select class="form-control" id="contactID" name="contactID" required>
                             <%
                                 var list = '<option value="" disabled selected>Select</option>';
                                 for (i = 0; i < contactList.length; i++) {
