--- a/CRM/views/search-event.ejs
+++ b/CRM/views/search-event.ejs
@@ -35,7 +35,7 @@
                   <div class="form-row">
                     <div class="form-group col-12">
                       <label for="clientSelect">Select Client</label>
-                      <select class="form-control" name="clientName" id="clientName">
+                      <select class="form-control" name="clientName" id="clientName" required>
                       <%
                           var list = '<option value="" disabled selected>Select</option>';
                           for (i = 0; i < locals.clients.length; i++) {
