--- a/CRM/views/entry-client.ejs
+++ b/CRM/views/entry-client.ejs
@@ -111,7 +111,7 @@
             <label for="inputAddress">Client Email Addresses</label>
               <div class="form-row">
           			<div class="col-auto">
-          			  <input type="email" class="form-control" id="clientEmail1" name="clientEmail1" placeholder="user1@email.com">
+          			  <input type="email" class="form-control" id="clientEmail1" name="clientEmail1" placeholder="user1@email.com" required>
           			</div>
           			<div class="col-auto">
           			  <input type="email" class="form-control" id="clientEmail2" name="clientEmail2" placeholder="user2@email.com">
