--- a/CRM/views/entry-event.ejs
+++ b/CRM/views/entry-event.ejs
@@ -2,12 +2,14 @@
 <html lang="en">
  <head>
  <!-- Required meta tags -->
+ <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
 
  <!-- CoreUI CSS -->
  <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui@3.0.0-rc.0/dist/css/coreui.min.css" crossorigin="anonymous">
  <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css">
+
 
  <title>CRM - Event Entry</title>
  </head>
@@ -37,7 +39,7 @@
               </div>
               <div class="form-group col">
                 <label for="agentID">Agent</label>
-                <select class="form-control" name="agentID">
+                <select class="form-control" name="agentID" required>
                 <%
                     var list = '<option value="" disabled selected>Select</option>';
                     for (i = 0; i < locals.agents.length; i++) {
@@ -65,7 +67,7 @@
           <div class="form-row">
               <div class="form-group col">
                 <label for="clientID">Client</label>
-                <select class="form-control" name="clientID" onChange="changeAgent(this.value);">
+                <select class="form-control" name="clientID" onChange="changeAgent(this.value);" required>
             		<%
                   	var list = '<option value="" disabled selected>Select</option>';
                   	for (i = 0; i < locals.clients.length; i++) {
@@ -81,8 +83,9 @@
           <script>
             function changeAgent(value){
               var contacts = JSON.parse($('#variableJSON').text());
+
               var contactOptions = "";
-              contactOptions += "<option>N/A</option>";
+              contactOptions += "<option disabled selected>Select</option>";
               for (j = 0; j < contacts.length; j++) {
                 if(contacts[j].contactClientID === value) {
                   contactOptions += "<option>" + contacts[j].contactFirstName + " " + contacts[j].contactLastName + "</option>";
@@ -113,8 +116,8 @@
             <label for="inputAddress">Contact(s) Visited</label>
               <div class="form-row">
           		<div class="form-group col">
-          			<select class="form-control" name="contactID1" id="contactID1">
-                  <option value="" disabled selected  required>Select</option>
+          			<select class="form-control" name="contactID1" id="contactID1" required>
+                  <option value="" disabled selected >Select</option>
                 </select>
           		</div>
           		<div class="form-group col">
@@ -130,7 +133,7 @@
             <label for="eventBranch">Branch Location (If Applicable)</label>
               <div class="form-row">
           			<div class="col">
-          			  <input type="text" class="form-control" id="eventBranch" name="eventBranch" placeholder="Location">
+          			  <input type="text" class="form-control" id="eventBranch" name="eventBranch" placeholder="Location" required>
           			</div>
           	</div>
           </div>
