--- a/CRM/views/report-client-list.ejs
+++ b/CRM/views/report-client-list.ejs
@@ -35,7 +35,7 @@
                   <div class="form-row">
                     <div class="form-group col-6">
                       <label for="agentSelect">Agent</label>
-                      <select class="form-control" name ="agentAbbrev" id="agentAbbrev">
+                      <select class="form-control" name ="agentAbbrev" id="agentAbbrev" required>
                         <%
                             var list = '<option value="" disabled selected>Select</option>';
                             for (i = 0; i < agentList.length; i++) {
