Fix margins for all views

--- a/CRM/views/entry-agent.ejs
+++ b/CRM/views/entry-agent.ejs
@@ -23,9 +23,9 @@
    <div class="c-body">
     <main class="c-main">
       <!-- Main content here -->
-      <main class="main mt-2 ml-3">
+      <main class="main mt-2 mx-3">
         <form id="formAddAgent" name="addAgent" method="post" action="/addAgent">
-        <div class="card  w-75">
+        <div class="card  w-auto">
           <h3 class="card-header">Agent Information</h3>
           <div class="card-body">
           <!-- Agent Abbreviation-->
