--- a/CRM/views/import-agent.ejs
+++ b/CRM/views/import-agent.ejs
@@ -25,8 +25,8 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 ml-3">
-          <div class="card  w-75">
+        <main class="main mt-2 mx-3">
+          <div class="card  w-auto">
             <h3> Instructions: </h3>
             <ul>
               <li> Download the template file: <a href="../public/files/agents.csv" download>Agents.csv</a></li>
