--- a/CRM/views/result-activity-report.ejs
+++ b/CRM/views/result-activity-report.ejs
@@ -25,7 +25,7 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <div class="card w-100">
+        <div class="card w-auto">
           <div class="card-body">
 
   <h3> <strong>Activity Report</strong></h3>
