--- a/CRM/views/result-client-history-report.ejs
+++ b/CRM/views/result-client-history-report.ejs
@@ -27,7 +27,7 @@
         <!-- Main content here -->
         <main class="main">
 
-          <div class="card w-100">
+          <div class="card w-auto">
             <div class="card-body">
 
     <h3> <strong>Client History Report</strong></h3>
