--- a/CRM/views/search-contact.ejs
+++ b/CRM/views/search-contact.ejs
@@ -25,8 +25,8 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 ml-3">
-            <div class="card w-50">
+        <main class="main mt-2 mx-3">
+            <div class="card w-auto">
               <h3 class="card-header">View/Edit Contact</h3>
               <form id="search-contact" name="search-contact" method="post" action="/search-contact">
               <div class="card-body">
