--- a/CRM/views/v1/result-activity-report.ejs
+++ b/CRM/views/v1/result-activity-report.ejs
@@ -22,7 +22,7 @@
 
     <main class="main">
 
-      <div class="card w-100">
+      <div class="card w-auto">
         <div class="card-body">
 
 <h3> <strong>Activity Report</strong></h3>
