--- a/CRM/views/entry-client.ejs
+++ b/CRM/views/entry-client.ejs
@@ -26,10 +26,10 @@
 
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 ml-3">
+        <main class="main mt-2 mx-3">
           <form id="formAddClient" name="addClient" method="post" action="/addClient">
 
-            <div class="card w-75">
+            <div class="card w-auto">
               <h3 class="card-header">Client Information</h3>
               <div class="card-body">
 
