--- a/CRM/views/entry-contact.ejs
+++ b/CRM/views/entry-contact.ejs
@@ -25,9 +25,9 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 ml-3">
+        <main class="main mt-2 mx-3">
           <form id="formAddContact" name="addContact" method="post" action="/addContact">
-          <div class="card  w-75">
+          <div class="card  w-auto">
             <h3 class="card-header">Contact Information</h3>
             <div class="card-body">
 
