--- a/CRM/views/entry-event.ejs
+++ b/CRM/views/entry-event.ejs
@@ -27,9 +27,9 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 ml-3">
+        <main class="main mt-2 mx-3">
           <form id="formAddEvent" name="addEvent" method="post" action="/addEvent">
-            <div class="card  w-75">
+            <div class="card  w-auto">
               <h3 class="card-header">Event Information</h3>
               <div class="card-body">
           <div class="form-row">
