--- a/CRM/views/import-client.ejs
+++ b/CRM/views/import-client.ejs
@@ -25,7 +25,7 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 ml-3">
+        <main class="main mt-2 mx-3">
 
           <div class="card w-auto">
             <h3> Instructions: </h3>
