--- a/CRM/views/oldpages/reports.ejs
+++ b/CRM/views/oldpages/reports.ejs
@@ -18,7 +18,7 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
+    <main class="main mt-2 mx-3">
       <h1>Welcome to the Reports Page</h1>
       <li><a href="/client-report">Client Reports</a></li>
       <li><a href="/contact-report">Contact Reports</a></li>
