--- a/CRM/views/oldpages/visit-count-report.ejs
+++ b/CRM/views/oldpages/visit-count-report.ejs
@@ -17,7 +17,7 @@
       <% include partials/sidebar %>
     </div>
 
-        <main class="main mt-2 ml-3">
+        <main class="main mt-2 mx-3">
           <h1>Visit Count Report</h1>
             <form id="formVisitCountReport" name="formVisitCountReport" method="post" action="/result-visit-count-report">
             <div class="card w-25">
