--- a/CRM/views/report-client-list.ejs
+++ b/CRM/views/report-client-list.ejs
@@ -25,9 +25,9 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 ml-3">
+        <main class="main mt-2 mx-3">
           <form id="formClientList" name="formClientList" method="post" action="/result-client-list-report">
-            <div class="card w-50">
+            <div class="card w-auto">
               <h3 class="card-header">Client List Report</h3>
               <div class="card-body">
 
