--- a/CRM/views/report-contact-history.ejs
+++ b/CRM/views/report-contact-history.ejs
@@ -25,9 +25,9 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 ml-3">
+        <main class="main mt-2 mx-3">
           <form id="formContactHistoryReport" name="formContactHistoryReport" method="post" action="/result-contact-history-report">
-          <div class="card w-50">
+          <div class="card w-auto">
             <h3 class="card-header">Contact History Report</h3>
             <div class="card-body">
     <!-- Select Client from Prepopulated list of options -->
