--- a/CRM/views/report-visit-count.ejs
+++ b/CRM/views/report-visit-count.ejs
@@ -25,9 +25,9 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 ml-3">
+        <main class="main mt-2 mx-3">
             <form id="formVisitCountReport" name="formVisitCountReport" method="post" action="/result-visit-count-report">
-            <div class="card w-50">
+            <div class="card w-auto">
               <h3 class="card-header">Visit Count Report</h3>
               <div class="card-body">
     <!-- Select Date Range for Data -->
