--- a/CRM/views/result-client-list-report.ejs
+++ b/CRM/views/result-client-list-report.ejs
@@ -25,7 +25,7 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 ml-3">
+        <main class="main mt-2 mx-3">
 
           <div class="card w-25">
             <div class="card-body">
