--- a/CRM/views/result-visit-count-report.ejs
+++ b/CRM/views/result-visit-count-report.ejs
@@ -25,9 +25,9 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 ml-3">
+        <main class="main mt-2 mx-3">
 
-          <div class="card w-50">
+          <div class="card w-auto">
             <div class="card-body">
 
     <h3> <strong>Visit Count Report</strong></h3>
