--- a/CRM/views/review-client-upload.ejs
+++ b/CRM/views/review-client-upload.ejs
@@ -25,7 +25,7 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 ml-3">
+        <main class="main mt-2 mx-3">
          <form action="/upload-clients" method="post">
            <input type="text" class="form-control" id="csvData" name="csvData" value="<%= JSONClients %>" hidden>
            <table class="table table-bordered">
