--- a/CRM/views/search-event.ejs
+++ b/CRM/views/search-event.ejs
@@ -25,8 +25,8 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 ml-3">
-            <div class="card w-50">
+        <main class="main mt-2 mx-3">
+            <div class="card w-auto">
               <h3 class="card-header">View/Edit Event</h3>
               <form id="search-event" name="search-event" method="post" action="/search-event">
               <div class="card-body">
