--- a/CRM/views/v1/entry-agent.ejs
+++ b/CRM/views/v1/entry-agent.ejs
@@ -18,9 +18,9 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
+    <main class="main mt-2 mx-3">
       <form id="formAddAgent" name="addAgent" method="post" action="/addAgent">
-      <div class="card  w-75">
+      <div class="card  w-auto">
         <h3 class="card-header">Agent Information</h3>
         <div class="card-body">
 
