--- a/CRM/views/v1/entry-event.ejs
+++ b/CRM/views/v1/entry-event.ejs
@@ -19,9 +19,9 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
+    <main class="main mt-2 mx-3">
       <form id="formAddEvent" name="addEvent" method="post" action="/addEvent">
-        <div class="card  w-75">
+        <div class="card  w-auto">
           <h3 class="card-header">Event Information</h3>
           <div class="card-body">
       <div class="form-row">
