--- a/CRM/views/v1/list-event.ejs
+++ b/CRM/views/v1/list-event.ejs
@@ -18,10 +18,10 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
+    <main class="main mt-2 mx-3">
       <form id="formListEvent" name="list-event" method="post" action="/list-event" onsubmit="enableFields()">
       <input type="name" class="form-control" id="clientName" name="clientName" value="<%= clientName %>" hidden>
-      <div class="card w-100">
+      <div class="card w-auto">
         <h3 class="card-header">List Events</h3>
         <div class="card-body">
       <h4> Event Information</h4>
