--- a/CRM/views/v1/report-activity.ejs
+++ b/CRM/views/v1/report-activity.ejs
@@ -17,9 +17,9 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
+    <main class="main mt-2 mx-3">
       <form id="formActivityReport" name="formActivityReport" method="post" action="/resultActivityReport">
-      <div class="card w-50">
+      <div class="card w-auto">
         <h3 class="card-header">Activity Report</h3>
         <div class="card-body">
 
