--- a/CRM/views/v1/report-client-list.ejs
+++ b/CRM/views/v1/report-client-list.ejs
@@ -17,9 +17,9 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
+    <main class="main mt-2 mx-3">
       <form id="formClientList" name="formClientList" method="post" action="/result-client-list-report">
-        <div class="card w-50">
+        <div class="card w-auto">
           <h3 class="card-header">Client List Report</h3>
           <div class="card-body">
 
