--- a/CRM/views/v1/report-visit-count.ejs
+++ b/CRM/views/v1/report-visit-count.ejs
@@ -17,10 +17,10 @@
       <% include partials/sidebar %>
     </div>
 
-        <main class="main mt-2 ml-3">
+        <main class="main mt-2 mx-3">
           <h1>Visit Count Report</h1>
             <form id="formVisitCountReport" name="formVisitCountReport" method="post" action="/result-visit-count-report">
-            <div class="card w-50">
+            <div class="card w-auto">
               <h3 class="card-header">Visit Count Report</h3>
               <div class="card-body">
     <!-- Select Date Range for Data -->
