--- a/CRM/views/v1/result-client-list-report.ejs
+++ b/CRM/views/v1/result-client-list-report.ejs
@@ -20,7 +20,7 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
+    <main class="main mt-2 mx-3">
 
       <div class="card w-25">
         <div class="card-body">
