--- a/CRM/views/v1/result-contact-history-report.ejs
+++ b/CRM/views/v1/result-contact-history-report.ejs
@@ -20,9 +20,9 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
+    <main class="main mt-2 mx-3">
 
-      <div class="card w-75">
+      <div class="card w-auto">
         <div class="card-body">
 
 <h3> <strong>Contact History Report</strong></h3>
