--- a/CRM/views/v1/search-client.ejs
+++ b/CRM/views/v1/search-client.ejs
@@ -17,8 +17,8 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
-        <div class="card w-50">
+    <main class="main mt-2 mx-3">
+        <div class="card w-auto">
           <h3 class="card-header">View/Edit Client</h3>
             <form id="search-client" name="search-client" method="post" action="/search-client">
           <div class="card-body">
