--- a/CRM/views/v1/search-contact.ejs
+++ b/CRM/views/v1/search-contact.ejs
@@ -17,8 +17,8 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
-        <div class="card w-50">
+    <main class="main mt-2 mx-3">
+        <div class="card w-auto">
           <h3 class="card-header">View/Edit Contact</h3>
           <form id="search-contact" name="search-contact" method="post" action="/search-contact">
           <div class="card-body">
