--- a/CRM/views/v1/template.ejs
+++ b/CRM/views/v1/template.ejs
@@ -17,7 +17,7 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
+    <main class="main mt-2 mx-3">
 
     </main>
 
