--- a/CRM/views/v1/view-client.ejs
+++ b/CRM/views/v1/view-client.ejs
@@ -268,12 +268,12 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
+    <main class="main mt-2 mx-3">
     <form id="formEditClient" name="viewClient" method="post" action="/viewClient" onsubmit="enableFields()">
     <input style="visibility: hidden" id="isEditing" name ="isEditing" value="false">
     <input type="name" class="form-control" id="origClientName" name="origClientName" value="<%= clientName %>" hidden>
     <input type="name" class="form-control" id="user" name="user" value="<%- user %>" hidden>
-        <div class="card w-100">
+        <div class="card w-auto">
           <h3 class="card-header">View/Edit Client</h3>
           <div class="card-body">
             <h4> Client Information</h4>
