--- a/CRM/views/v1/view-contact.ejs
+++ b/CRM/views/v1/view-contact.ejs
@@ -130,10 +130,10 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
+    <main class="main mt-2 mx-3">
       <form id="formEditContact" name="viewContact" method="post" action="/viewContact" onsubmit="enableFields()">
       <input type="name" class="form-control" id="contactID" name="contactID" value="<%= contactID %>" hidden>
-      <div class="card w-100">
+      <div class="card w-auto">
         <h3 class="card-header">View/Edit Contact</h3>
         <div class="card-body">
       <h4> Contact Information</h4>
