--- a/CRM/views/view-event.ejs
+++ b/CRM/views/view-event.ejs
@@ -183,10 +183,10 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 ml-3">
+        <main class="main mt-2 mx-3">
           <form id="formEditEvent" name="viewEvent" method="post" action="/viewEvent" onsubmit="enableFields()">
           <input type="name" class="form-control" id="eventID" name="eventID" value="<%= eventID %>" hidden>
-          <div class="card w-100">
+          <div class="card w-auto">
             <h3 class="card-header">View/Edit Event</h3>
             <div class="card-body">
             <h4> Event Information</h4>
