Fixed minor formatting of import pages

--- a/CRM/views/import-agent.ejs
+++ b/CRM/views/import-agent.ejs
@@ -27,7 +27,9 @@
         <!-- Main content here -->
         <main class="main mt-2 mx-3">
           <div class="card  w-auto">
-            <h3> Instructions: </h3>
+            <h3 class="card-header">Import Agent Tool</h3>
+            <div class="card-body">
+            <h4> Instructions: </h4>
             <ul>
               <li> Download the template file: <a href="../public/files/agents.csv" download>Agents.csv</a></li>
               <li> Populate table with Agent information.</li>
@@ -39,7 +41,7 @@
             <br/>
             <h3> Example Data: </h3>
             <a href="/files/agents.csv" download>Download Template CSV File</a>
-            <table class="table table-bordered">
+            <table class="table table-bordered table-responsive">
               <thead class="thead-dark">
                 <tr>
                   <th style="width: 5%" scope="col">Agent Abbreviation:</th>
@@ -57,6 +59,7 @@
               </thead>
             </table>
           </div>
+        </div>
 
         <h3> Upload File: </h3>
 
