--- a/CRM/views/import-client.ejs
+++ b/CRM/views/import-client.ejs
@@ -28,7 +28,9 @@
         <main class="main mt-2 mx-3">
 
           <div class="card w-auto">
-            <h3> Instructions: </h3>
+            <h3 class="card-header">Import Client Tool</h3>
+            <div class="card-body">
+            <h4> Instructions: </h4>
             <ul>
               <li> Download the template file: <a href="/files/clients.csv" download>Clients.csv</a></li>
               <li> Populate table with Client information.</li>
@@ -38,9 +40,9 @@
               <li> Upload the file, click submit and review the information on the next page.</li>
             </ul>
             <br/>
-            <h3> Example Data: </h3>
+            <h4> Example Data: </h4>
             <a href="/files/clients.csv" download>Download Template CSV File</a>
-            <table class="table table-bordered">
+            <table class="table table-bordered table-responsive">
               <thead class="thead-dark">
                 <tr>
                   <th style="width: 10%" scope="col">Client Name:</th>
@@ -68,7 +70,8 @@
               </thead>
             </table>
           </div>
-          
+        </div>
+
 
           <h3> Upload File: </h3>
 
